# python-package-ci-cd

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/workflows/: _reusable-check-api-for-breaking-changes.yml  _reusable-codeql-analysis.yml  _reusable-enforce-community-standards.yml  _reusable-package-build.yml  _reusable-package-release.yml  _reusable-package-testpypi.yml  _reusable-publish-api-comparison.yml  _reusable-publish-test-results.yml  _reusable-sbom-scan.yml  _reusable-test-code.yml  _reusable-test-docs.yml  _reusable-update-python-and-pre-commit-dependencies.yml  auto-approve.yml  codeql-analysis.yml  dependency-review.yml  enforce-community-standards.yml  package-release.yml  pre-commit.yml  publish-test-results.yml  sbom-scan.yml  test-actions.yml  test-code.yml  test-docs.yml  update-python-and-pre-commit-dependencies.yml  update-python-dependencies.yml
actions/codeql-analysis/: action.yml  readme.md
actions/create-unique-testpypi-version/: action.yml  main.py  readme.md  requirements.txt
actions/create_unique_testpypi_version/: Dockerfile  main.py  readme.md  requirements.txt
actions/fetch_pr_number/: action.yml  readme.md
actions/find-unreleased-changelog-items/: Dockerfile  action.yml  main.py  readme.md  requirements.txt
actions/find_unreleased_changelog_items/: Dockerfile  action.yml  main.py  readme.md
actions/update-dependencies-in-poetry-and-pre-commit/: requirements.txt  update_development_dependencies.py
actions/update-development-dependencies/: Dockerfile  action.yml  main.py  readme.md  requirements.txt  update_development_dependencies.py
actions/update_development_dependencies/: Dockerfile  action.yml  main.py  readme.md  requirements.txt
doc_config/: .linkchecker.ini  known_words.txt  macros.py  requirements.txt
doc_config/_static/css/: theme_overrides.css
doc_config/_static/js/: copybutton.js
python_semantic_release_templates/: CHANGELOG.md.j2
scripts/: bump_version_in_files.py  contributor_setup.py  remove_python_version_condition_from_req_file.py
tests/: conftest.py  requirements.txt  test_bump_version_in_files.py  test_create_unique_testpypi_version.py  test_docs.py  test_find_unreleased_changelog_items.py  test_update_development_dependencies.py
workflows/: check-api-for-breaking-changes.md  check-api-for-breaking-changes.yml  codeql-analysis.md  enforce-community-standards.md  enforce-community-standards.yml  package-build.md  package-release.md  package-testpypi.md  publish-api-comparison.md  publish-test-results.md  sbom-scan.md  test-code.md  test-docs.md  update-python-and-pre-commit-dependencies.md
