[tool]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover"
]
fail_under = 100
include_namespace_packages = true
omit = [
  "contributor_setup.py",
  "remove_python_version_condition_from_req_file.py"
]
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
cover_pylib = false
source = ["actions", "scripts"]

[tool.docformatter]
close-quotes-on-newline = true
in-place = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 0

[tool.poetry]
license = "Apache-2.0"
package-mode = false
version = "1.5.1"

[tool.poetry.dependencies]
python = "~3.12"  # This needs to stay in sync with all CI workflows

[tool.poetry.group.actions-create_unique_testpypi_version.dependencies]
poetry-core = "1.9.1"
pypi-simple = "1.6.1"
tomli = "2.0.2"
tomli-w = "1.1.0"

[tool.poetry.group.actions-find_unreleased_changelog_items.dependencies]

[tool.poetry.group.actions-update_development_dependencies.dependencies]
poetry-plugin-export = "1.8.0"
pre-commit = "4.0.1"
pypi-simple = "1.6.1"
toml-sort = "0.23.1"
yamlfix = "1.17.0"

[tool.poetry.group.dev.dependencies]
pip = "^24.0"
poetry-audit-plugin = "^0.4.0"
poetry-plugin-export = "1.8.0"
poetry-pre-commit-plugin = "^0.1.2"
pre-commit = "4.0.1"
pylint = "3.3.1"
pyright = {extras = ["nodejs"], version = "1.1.387"}
tox = "^4.18.0"
tox-gh-actions = "^3.2.0"

[tool.poetry.group.docs.dependencies]
codespell = "^2.0.0"
mkdocs = "^1.6.0"
mkdocs-ezglossary-plugin = "^1.6.10"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-same-dir = "^0.1.3"
mkdocs-spellcheck = "^1.1.0"
pygments = "^2.17.2"
pymdown-extensions = "^10.8.1"
symspellpy = "^6.7.7"
tomli = "2.0.2"

[tool.poetry.group.tests.dependencies]
coverage = "^7.5.0"
linkchecker = "^10.0.0"
pytest = "^8.2.0"
pytest-cov = "^6.0.0"
pytest-depends = "^1.0.1"
pytest-env = "^1.1.3"
pytest-github-report = "^0.0.1"
pytest-html = "^4.1.1"
pytest-order = "^1.2.1"
pytest-subprocess = "^1.5.2"

[tool.pylint.main]
fail-under = 10.0
ignore-patterns = [
  "^\\.#",
  "^\\..*_cache",
  "^\\.docs.*",
  "^\\.env.*",
  "^\\.idea",
  "^\\.results.*",
  "^\\.tox",
  "^\\.venv.*",
  "^\\.vscode",
  "^temp_.*\\..*"
]
init-hook = 'import sys; sys.path.append(".")'
jobs = 0
load-plugins = """
pylint.extensions.check_elif,
pylint.extensions.code_style,
pylint.extensions.comparison_placement,
pylint.extensions.consider_refactoring_into_while_condition,
pylint.extensions.dict_init_mutate,
pylint.extensions.docparams,
pylint.extensions.docstyle,
pylint.extensions.dunder,
pylint.extensions.eq_without_hash,
pylint.extensions.for_any_all,
pylint.extensions.no_self_use,
pylint.extensions.overlapping_exceptions,
pylint.extensions.private_import,
pylint.extensions.set_membership,
pylint.extensions.typing,
pylint.extensions.while_used
"""
recursive = true

[tool.pylint."messages control"]
disable = [
  "broad-exception-caught",  # caught by ruff
  "fixme",  # caught by ruff
  "global-statement",  # caught by ruff
  "invalid-name",  # caught by ruff
  "line-too-long",  # caught by ruff
  "locally-disabled",  # allowed
  "missing-class-docstring",  # caught by ruff
  "missing-module-docstring",  # caught by ruff
  "no-member",  # caught by pyright
  "protected-access",  # caught by ruff
  "raise-missing-from",  # caught by ruff
  "redefined-builtin",  # caught by ruff
  "suppressed-message",  # allowed
  "too-many-arguments",  # caught by ruff
  "too-many-branches",  # caught by ruff
  "too-many-statements",  # caught by ruff
  "too-many-statements",  # caught by ruff
  "unused-argument",  # caught by ruff
  "unused-import",  # caught by ruff
  "use-implicit-booleaness-not-comparison-to-string",  # caught by ruff
  "wrong-import-order"  # caught by ruff
]
enable = ["all"]

[tool.pylint.reports]
# Python expression which should return a score less than or equal to 10. You
# have access to the variables 'fatal', 'error', 'warning', 'refactor',
# 'convention', and 'info' which contain the number of messages in each category,
# as well as 'statement' which is the total number of statements analyzed. This
# score is used by the global evaluation report (RP0004).
evaluation = "max(0, 0 if fatal else 10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10))"
output-format = "text"  # colorized could be another option
score = true

[tool.pyright]
ignore = [
  "temp_*.py"
]
pythonPlatform = "All"
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "none"  # this is allowed
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # this can safely be ignored
strict = ["**"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml"
filterwarnings = [
]
junit_family = "xunit2"
junit_logging = "all"
markers = [
  'docs',
  'order',
  'slow'
]
pythonpath = "."
xfail_strict = true

[tool.pytest_env]
pytest_report_title = {skip_if_set = true, value = "Test Results"}

[tool.ruff]
line-length = 100
output-format = "concise"
src = ["."]

[tool.ruff.lint]
allowed-confusables = ["¸", "×"]
fixable = ["ALL"]
flake8-pytest-style = {mark-parentheses = false}
flake8-quotes = {docstring-quotes = "double"}
ignore = [
  "COM812",  # Trailing comma missing (handled by the formatter)
  "FIX002",  # Line contains TO DO, consider resolving the issue
  "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
  "ISC001",  # single-line-implicit-string-concatenation (handled by formatter)
  "T201",  # `print` found
  "TD002",  # Missing author in TO DO
  "TD003"  # TD003 Missing issue link on the line following this TO DO
]
pydocstyle = {convention = "google"}
pylint = {max-args = 7}
# https://beta.ruff.rs/docs/rules/
select = [
  "ALL"
]
task-tags = ["FIXME", "FUTURE", "RELIC", "TODO"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = []
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "PLR2004",  # Magic value used in comparison
  "S101"  # Use of assert detected
]

[tool.semantic_release]
build_command = """
  python -m scripts.bump_version_in_files
"""
version_toml = [
  "pyproject.toml:tool.poetry.version"
]

[tool.semantic_release.changelog]
exclude_commit_patterns = []
template_dir = "python_semantic_release_templates"

[tool.semantic_release.changelog.environment]
extensions = []

[tool.semantic_release.commit_parser_options]
# These settings allow python-semantic-release to be used without triggering on any commits
allowed_tags = []
minor_tags = []
patch_tags = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
overrides."tool.poetry.*".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox>4
no_package = True
envlist = py312,tests,docs,doctests
skip_missing_interpreters = False

[gh-actions]
python =
    3.12: py312

[testenv]
install_command = python -I -m pip install --upgrade --upgrade-strategy=eager {opts} {packages}
deps =
    poetry
setenv =
    # Skip pre-commit checks that are not needed
    SKIP = file-contents-sorter
commands_pre =
    python -m poetry install --sync
commands =
    !tests: pre-commit run --all-files
    pytest -vv -k "not test_docs" --showlocals --cov --junitxml={tox_root}/.results_{envname}/results.xml --cov-report=term --cov-report=xml:{tox_root}/.coverage_{envname}.xml --cov-report=html:{tox_root}/.results_{envname}/html --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:tests]
basepython = python
passenv =
    pytest_report_title
setenv =
    pytest_github_report = true
    pytest_use_blanks = true
    GITHUB_STEP_SUMMARY = {tox_root}/.results_{envname}/github_report.md

[testenv:docs]
commands_pre =
    python -m poetry install --only docs
commands =
    python -c "import shutil; shutil.rmtree('.results_{envname}', ignore_errors=True)"
    mkdocs --verbose build --site-dir .results_{envname}

[testenv:doctests]
commands =
    pytest -v -k "test_docs" --showlocals --junitxml={tox_root}/.results_{envname}/results.xml --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:export-reqs]
commands =
    poetry export --without-hashes --without-urls --all-extras --only=actions-create_unique_testpypi_version --output=actions/create_unique_testpypi_version/requirements.txt
    python scripts/remove_python_version_condition_from_req_file.py actions/create_unique_testpypi_version/requirements.txt
    poetry export --without-hashes --without-urls --all-extras --only=actions-find_unreleased_changelog_items --output=actions/find_unreleased_changelog_items/requirements.txt
    python scripts/remove_python_version_condition_from_req_file.py actions/find_unreleased_changelog_items/requirements.txt
    poetry export --without-hashes --without-urls --all-extras --only=actions-update_development_dependencies --output=actions/update_development_dependencies/requirements.txt
    python scripts/remove_python_version_condition_from_req_file.py actions/update_development_dependencies/requirements.txt
    - pre-commit run -a requirements-txt-fixer
    - pre-commit run -a trailing-whitespace
    - pre-commit run -a end-of-file-fixer
"""

[tool.yamlfix]
comments_min_spaces_from_content = 1
